# Meta-Tic-Tac-Toe

./: README.md
k8s/: deployment.yaml
server/: Cargo.toml
server/src/: elo.rs  main.rs  redis_store.rs  ws.rs
server/src/game/: mod.rs  state.rs  win_check.rs
shared/: Cargo.toml
shared/src/: protocol.rs
