[package]
name = "ttt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.25", features = ["tokio-comp"] }
dashmap = "5"
thiserror = "1"
futures-util = "0.3"
shared = { path = "../shared" }